--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vee-validate": "^4.12.5",
     "vue": "^3.4.19",
     "vue-axios": "^3.5.2",
+    "vue-easy-lightbox": "^1.19.0",
     "vue-loading-overlay": "^6.0.4",
     "vue-router": "^4.2.5"
   },
