--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "serve": "node server.js"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.2.1",
+    "@ckeditor/ckeditor5-vue": "^5.1.0",
     "@vee-validate/i18n": "^4.12.5",
     "@vee-validate/rules": "^4.12.5",
     "axios": "^1.6.7",
