--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
     "epic-spinners": "^2.0.0",
+    "jquery": "^3.7.1",
     "mitt": "^3.0.1",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
